config/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  labels:
    app: api
spec:
  selector:
    matchLabels:
      app: api
  replicas: 1
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: api:latest
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 1323
          protocol: TCP
        livenessProbe:
          initialDelaySeconds: 30
          periodSeconds: 10
          httpGet:
            path: /api/v1/ping
            port: http
        readinessProbe:
          initialDelaySeconds: 10
          periodSeconds: 10
          httpGet:
            path: /api/v1/ping
            port: http
        resources:
          requests:
            cpu: 0.5
            memory: 512Mi
      serviceAccountName: api
      terminationGracePeriodSeconds: 10
